Added ability to modify recipe book details from ActivityRecipeBook
Soft-keyboard now automatically hides when user is finished editing chapter information

Fixed bug preventing chapters from adding more than 1 recipe.

--- a/app/src/main/res/layout/dialog_import_recipe.xml
+++ b/app/src/main/res/layout/dialog_import_recipe.xml
@@ -11,6 +11,6 @@
         android:inputType="textUri"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/dialog_import_url_hint"/>
+        android:hint="@string/hint_import_url"/>
 
 </LinearLayout>
