--- a/app/src/main/res/layout/list_item_nutrient.xml
+++ b/app/src/main/res/layout/list_item_nutrient.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.GridLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,25 +10,28 @@
     <TextView
         android:id="@+id/list_nutrient_text"
         android:layout_width="@dimen/list_nutrient_keyline"
+        android:layout_height="wrap_content"
         style="@style/bodyDarkText"
         app:layout_gravity="center_vertical"
         tools:text="Cholesterol:"/>
     <TextView
         android:id="@+id/list_nutrient_value_text"
         android:layout_width="@dimen/list_nutrient_value_keyline"
+        android:layout_height="wrap_content"
         app:layout_gravity="center_vertical"
         tools:text="286 kcal"/>
 
     <FrameLayout
         android:id="@+id/list_nutrient_percentage_background"
         android:layout_width="@dimen/list_nutrient_percent_keyline"
+        android:layout_height="wrap_content"
         android:background="@color/grey_300"
         android:layout_margin="3dp"
         app:layout_gravity="fill_vertical">
 
         <ImageView
             android:id="@+id/list_nutrient_percentage_bar"
-            android:layout_height="match_parent"
+            android:layout_height="12dp"
             android:layout_width="wrap_content"
             android:src="@color/colorPrimary"
             tools:layout_width="14dp" />
@@ -36,9 +39,11 @@
 
     <TextView
         android:id="@+id/list_nutrient_percentage_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:paddingStart="5dp"
         android:paddingLeft="5dp"
         app:layout_gravity="center_vertical"
         tools:text="14%"/>
 
-</android.support.v7.widget.GridLayout>
+</LinearLayout>
