--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -16,4 +16,37 @@
         <item name="background">@null</item>
         <item name="colorPrimary">@color/transparent_white</item>
     </style>
+
+    <style name="AppTheme.RecipeList" parent="AppTheme">
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+        <!--<item name="android:windowExitTransition">@transition/recipe_list_exit_transition</item>-->
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+        <!--<item name="android:windowReturnTransition">.@transition/recipe_list_exit_transition</item>-->
+        <!--<item name="android:windowReenterTransition">@transition/recipe_list_exit_transition</item>-->
+    </style>
+
+    <style name="AppTheme.Details" parent="AppTheme">
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowEnterTransition">@transition/details_window_enter_transition</item>
+        <item name="android:windowExitTransition">@transition/details_window_return_transition</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+    </style>
+
+    <style name="AppTheme.Favorites" parent="AppTheme">
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+    </style>
+
+    <style name="AppTheme.MyRecipes" parent="AppTheme">
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+    </style>
 </resources>
